MLA-23 write code for see the reviews task (part1)